...
				android:text="@string/tab_favorites_title" />
		
		</android.support.design.widget.TabLayout>
	</android.support.design.widget.AppBarLayout>
	
	<android.support.v4.view.ViewPager
		android:id="@+id/container"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior" />
	
	<android.support.design.widget.FloatingActionButton
		android:id="@+id/fab_list_neighbour"
...
