...
		
		</LinearLayout>
	
	</android.support.v4.widget.NestedScrollView>
	
	<android.support.design.widget.FloatingActionButton
		android:id="@+id/favorite_fab"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/activity_horizontal_margin"
		android:backgroundTint="#FDFCFC"
		android:src="@drawable/ic_star_border_yellow_24dp"
		app:layout_anchor="@id/appBar"
...
